plugins {
    id 'java'
    id 'application'
  	id 'org.springframework.boot' version '2.5.4'
  	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group 'de.janbraunsdorff'
version '1.0-SNAPSHOT'
mainClassName = 'de.janbraunsdorff.ase.App'
targetCompatibility = '16'
sourceCompatibility = '16'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jetbrains:annotations:19.0.0'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    compileOnly("org.springframework.boot:spring-boot-devtools")
    developmentOnly("org.springframework.boot:spring-boot-devtools")

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.4.1'
    runtimeOnly 'com.h2database:h2'
    compileOnly("org.springframework.boot:spring-boot-devtools")
    
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'

    testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')


    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'

}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}


tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

configurations {
    developmentOnly
    runtimeClasspath {
        extendsFrom developmentOnly
    }
}

test {
    jvmArgs += '--enable-preview'
    useJUnitPlatform()
}
